samples/_failures_safe/1760888300_1faa85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa4038d1.c: In function ‘main’:
./samples/SAFE/__tmp_fa4038d1.c:143:5: error: expected declaration or statement at end of input
  143 |     switch (op) {
      |     ^~~~~~
./samples/SAFE/__tmp_fa4038d1.c:143:5: error: expected declaration or statement at end of input
